[package]
name = "monitor-bot"
edition = "2021"
publish = false

[dependencies]
arc-swap = { workspace = true }
serde = "1.0.217"
solana-entry = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
solana-client = { workspace = true }
solana-metrics = { workspace = true }
prost-types = { workspace = true }
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
tokio = "1.29.1"
serde_json = "1.0.111"
bs58 = "0.4.0"
bincode = "1.3.3"
uuid = { version = "1.0", features = ["v4"] }
tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
spl-associated-token-account = "=6.0.0"
spl-token = "=7.0.0"
jito-protos = { path = "../jito_protos" }
thiserror = "1"
chrono = "0.4"

[dev-dependencies]